--- a/src/css/nav.module.css
+++ b/src/css/nav.module.css
@@ -1,21 +1,37 @@
-.navbar {
-  display: grid;
-  grid-gap: 30px;
-  grid-auto-flow: column;
+.nav {
+  display: flex;
+  position: relative;
   align-items: center;
+  height: 100%;
+}
+
+.nav__menu {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: min-content;
+  white-space: nowrap;
+  grid-gap: 3rem;
+  height: 100%;
+  align-items: center;
+  z-index: 10;
 }
 
 .nav__item {
-  color: black;
-  margin-right: 10px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  text-decoration: none;
-  transition: all 100ms ease;
+  list-style-type: none;
 }
 
-.nav__item:hover,
-.nav__item__active {
-  border-bottom: 2px solid black;
-  padding-bottom: 2px;
+.nav__link {
+  color: #515052;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.6rem;
+}
+
+.nav__link:hover,
+.nav__link__active {
+  border-bottom: 2px solid #d5a23c;
+}
+
+.nav__link__active {
+  font-weight: bold;
 }
